Fix paths for GitHub Pages

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <input type="search" placeholder="search..." />
 
           <!--Basket-->
-          <a href="cart.html">
+          <a href="/HTML/cart.html">
            <div class="shopping-cart">
             <span class="material-symbols-outlined cart-icon" id="cart">shopping_cart</span>
             <span class="shopping-cart-accounter" id="cart-count">0</span>
