--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 
-    <link rel="stylesheet" href="./CSS/style.css" />
-    <script src="/JavaScript/animations.js" defer></script>
-    <script src="/JavaScript/main.js" defer></script>
-    <script type="module" src="/JavaScript/renderProducts.js" defer></script>
+    <link rel="stylesheet" href="CSS/style.css" />
+    <script src="JavaScript/animations.js" defer></script>
+    <script src="JavaScript/main.js" defer></script>
+    <script type="module" src="JavaScript/renderProducts.js" defer></script>
   </head>
   <body>
     <header>
