Correction des chemins relatifs dans tous les fichiers HTML

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -233,10 +233,10 @@
         <div class="social">
             <h3 class="follow">Follow us!</h3>
             <div>
-                <img src="/MultiMedia/facebook.png" class="fIcons" alt="facebook Icon">
-                <img src="/MultiMedia/instagram.png" class="fIcons" alt="facebook Icon">
-                <img src="/MultiMedia/youtube.png" class="fIcons" alt="facebook Icon">
-                <img src="/MultiMedia/linkedin.png" class="fIcons" alt="facebook Icon">
+                <img src="MultiMedia/facebook.png" class="fIcons" alt="facebook Icon">
+                <img src="MultiMedia/instagram.png" class="fIcons" alt="facebook Icon">
+                <img src="MultiMedia/youtube.png" class="fIcons" alt="facebook Icon">
+                <img src="MultiMedia/linkedin.png" class="fIcons" alt="facebook Icon">
             </div>
         </div><br><hr>
          <div>
