resolve links issues on cart page

--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping Cart</title>
-  <link rel="stylesheet" href="CSS/cart.css">
-  <link rel="stylesheet" href="components/componentHeader.css">
-  <link rel="stylesheet" href="components/componentFooter.css">
+  <link rel="stylesheet" href="/CSS/cart.css">
+  <link rel="stylesheet" href="/components/componentHeader.css">
+  <link rel="stylesheet" href="/components/componentFooter.css">
 
   <script type="module" src="JavaScript/loaderComponent.js" defer></script>
   <script src="JavaScript/mobileMenu.js" defer></script>
