trying to fix the technical issues

--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="/components/componentHeader.css">
   <link rel="stylesheet" href="/components/componentFooter.css">
 
-  <script type="module" src="JavaScript/loaderComponent.js" defer></script>
-  <script src="JavaScript/mobileMenu.js" defer></script>
-  <script type="module" src="JavaScript/cart.js" defer></script>
-  <script type="module" src="JavaScript/cartCounter.js" defer></script>
-  <script src="JavaScript/productsData.js" defer></script>
-  <script src="JavaScript/paymentPopup.js" defer></script>
+  <script type="module" src="/JavaScript/loaderComponent.js" defer></script>
+  <script src="/JavaScript/mobileMenu.js" defer></script>
+  <script type="module" src="/JavaScript/cart.js" defer></script>
+  <script type="module" src="/JavaScript/cartCounter.js" defer></script>
+  <script src="/JavaScript/productsData.js" defer></script>
+  <script src="/JavaScript/paymentPopup.js" defer></script>
 
 </head>
 <body>
