--- a/index.html
+++ b/index.html
@@ -59,24 +59,24 @@
     <main>
       <section>
         <div>
-          <video src="MultiMedia/Model.mp4" autoplay loop muted></video>
+          <video src="/MultiMedia/Model.mp4" autoplay loop muted></video>
         </div>
 
         <div class="menu">
           <h2>MENU</h2>
           <ul class="rotator">
             <li class="rotator">
-              <a href="HTML/dresses.html"><span>Dresses</span></a></li>
+              <a href="/HTML/dresses.html"><span>Dresses</span></a></li>
             <li class="rotator">
-              <a href="HTML/jeans.html"><span>Jeans</span></a></li>
+              <a href="/HTML/jeans.html"><span>Jeans</span></a></li>
             <li class="rotator">
-              <a href="HTML/shoes.html"><span>Shoes</span></a></li>
+              <a href="/HTML/shoes.html"><span>Shoes</span></a></li>
             <li class="rotator">
-              <a href="HTML/jewellery.html"><span>Jewellery</span></a></li>
+              <a href="/HTML/jewellery.html"><span>Jewellery</span></a></li>
             <li class="rotator">
-              <a href="HTML/coats.html"><span>Coats</span></a></li>
+              <a href="/HTML/coats.html"><span>Coats</span></a></li>
             <li class="rotator">
-              <a href="HTML/bags.html"><span>Bags</span></a></li>
+              <a href="/HTML/bags.html"><span>Bags</span></a></li>
           </ul>
         </div>
       </section>
