--- a/HTML/index.html
+++ b/HTML/index.html
@@ -43,7 +43,7 @@
           <input type="search" placeholder="search..." />
 
           <!--Basket-->
-          <a href="cart.html">
+          <a href="HTML/cart.html">
            <div class="shopping-cart">
             <span class="material-symbols-outlined cart-icon" id="cart">shopping_cart</span>
             <span class="shopping-cart-accounter" id="cart-count">0</span>
@@ -66,17 +66,17 @@
           <h2>MENU</h2>
           <ul class="rotator">
             <li class="rotator">
-              <a href="dresses.html"><span>Dresses</span></a></li>
+              <a href="/HTML/dresses.html"><span>Dresses</span></a></li>
             <li class="rotator">
-              <a href="jeans.html"><span>Jeans</span></a></li>
+              <a href="/HTML/jeans.html"><span>Jeans</span></a></li>
             <li class="rotator">
-              <a href="shoes.html"><span>Shoes</span></a></li>
+              <a href="/HTML/shoes.html"><span>Shoes</span></a></li>
             <li class="rotator">
-              <a href="jewellery.html"><span>Jewellery</span></a></li>
+              <a href="/HTML/jewellery.html"><span>Jewellery</span></a></li>
             <li class="rotator">
-              <a href="coats.html"><span>Coats</span></a></li>
+              <a href="/HTML/coats.html"><span>Coats</span></a></li>
             <li class="rotator">
-              <a href="bags.html"><span>Bags</span></a></li>
+              <a href="/HTML/bags.html"><span>Bags</span></a></li>
           </ul>
         </div>
       </section>
@@ -148,7 +148,7 @@
           <p>AUTUMN NEW ARRIVALS</p>
           <h3>New Season</h3>
           <h3>New Collection</h3>
-          <a href="winterCollection.html"><button class="newCollButton">Choose your style</button></a>
+          <a href="/HTML/winterCollection.html"><button class="newCollButton">Choose your style</button></a>
         </div>
         <div class="sectNewColl">
           <img src="/MultiMedia/newcollection2.jpg" class="imgNewColl" alt="winter collection">
@@ -191,34 +191,34 @@
         <div class="footermenu">
           <h3 class="menutitle">About us</h3>
           <ul class="fMenuList">
-            <li class="fMenuListItem"><a href="company.html">Company</a></li>
-            <li class="fMenuListItem"><a href="contact.html">Contact</a></li>
-            <li class="fMenuListItem"><a href="careers.html">Careers</a></li>
-            <li class="fMenuListItem"><a href="affiliates.html">Affiliates</a></li>
-            <li class="fMenuListItem"><a href="stores.html">Stores</a></li>
+            <li class="fMenuListItem"><a href="/HTML/company.html">Company</a></li>
+            <li class="fMenuListItem"><a href="/HTML/contact.html">Contact</a></li>
+            <li class="fMenuListItem"><a href="/HTML/careers.html">Careers</a></li>
+            <li class="fMenuListItem"><a href="/HTML/affiliates.html">Affiliates</a></li>
+            <li class="fMenuListItem"><a href="/HTML/stores.html">Stores</a></li>
           </ul>
         </div>
 
         <div class="footermenu">
           <h3 class="menutitle">Useful links</h3>
           <ul class="fMenuList">
-            <li class="fMenuListItem"><a href="support.html">Support</a></li>
-            <li class="fMenuListItem"><a href="refund.html">Refund</a></li>
-            <li class="fMenuListItem"><a href="faq.html">FAQ</a></li>
-            <li class="fMenuListItem"><a href="privacy-policy.html">Privacy policy</a></li>
-            <li class="fMenuListItem"><a href="terms-of-use.html">Terms of use</a></li>
+            <li class="fMenuListItem"><a href="/HTML/support.html">Support</a></li>
+            <li class="fMenuListItem"><a href="/HTML/refund.html">Refund</a></li>
+            <li class="fMenuListItem"><a href="/HTML/faq.html">FAQ</a></li>
+            <li class="fMenuListItem"><a href="/HTML/privacy-policy.html">Privacy policy</a></li>
+            <li class="fMenuListItem"><a href="/HTML/terms-of-use.html">Terms of use</a></li>
           </ul>
         </div>
 
          <div class="footermenu">
                 <h3 class="menutitle">Products</h3>
                 <ul class="fMenuList">
-                   <li class="fMenuListItem"><a href="dresses.html"><span>Dresses</span></a></li>
-                   <li class="fMenuListItem"><a href="jeans.html"><span>Jeans</span></a></li>
-                   <li class="fMenuListItem"><a href="shoes.html"><span>Shoes</span></a></li>
-                   <li class="fMenuListItem"><a href="jewellery.html"><span>Jewellery</span></a></li>
-                   <li class="fMenuListItem"><a href="coats.html"><span>Coats</span></a></li>
-                   <li class="fMenuListItem"><a href="bags.html"><span>Bags</span></a></li>
+                   <li class="fMenuListItem"><a href="/HTML/dresses.html"><span>Dresses</span></a></li>
+                   <li class="fMenuListItem"><a href="/HTML/jeans.html"><span>Jeans</span></a></li>
+                   <li class="fMenuListItem"><a href="/HTML/shoes.html"><span>Shoes</span></a></li>
+                   <li class="fMenuListItem"><a href="/HTML/jewellery.html"><span>Jewellery</span></a></li>
+                   <li class="fMenuListItem"><a href="/HTML/coats.html"><span>Coats</span></a></li>
+                   <li class="fMenuListItem"><a href="/HTML/bags.html"><span>Bags</span></a></li>
                 </ul>
             </div>
       </div>
@@ -233,10 +233,10 @@
         <div class="social">
             <h3 class="follow">Follow us!</h3>
             <div>
-                <img src="MultiMedia/facebook.png" class="fIcons" alt="facebook Icon">
-                <img src="MultiMedia/instagram.png" class="fIcons" alt="facebook Icon">
-                <img src="MultiMedia/youtube.png" class="fIcons" alt="facebook Icon">
-                <img src="MultiMedia/linkedin.png" class="fIcons" alt="facebook Icon">
+                <img src="/MultiMedia/facebook.png" class="fIcons" alt="facebook Icon">
+                <img src="/MultiMedia/instagram.png" class="fIcons" alt="facebook Icon">
+                <img src="/MultiMedia/youtube.png" class="fIcons" alt="facebook Icon">
+                <img src="/MultiMedia/linkedin.png" class="fIcons" alt="facebook Icon">
             </div>
         </div><br><hr>
          <div>
