--- a/HTML/signup.html
+++ b/HTML/signup.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SARA | Signup</title>
-    <link rel="stylesheet" href="CSS/signup.css">
-    <script src="JavaScript/signup.js" defer></script>
+    <link rel="stylesheet" href="/CSS/signup.css">
+    <script src="/JavaScript/signup.js" defer></script>
 </head>
 <body>
     <section class="signup">
-        <a href="HTML/index.html"><h1>SARA</h1></a>
+        <a href="/HTML/index.html"><h1>SARA</h1></a>
         <p class="text">Personal details</p>
 
         <form action="">
@@ -17,7 +17,7 @@
 
             <div class="passwordContainer">
              <input type="password" name="pswd" id="pswd" class="pswd" placeholder="PASSWORD" required>
-             <img src="MultiMedia/eye.png" class="eyeIcon" id="eyeIcon" alt="eye icon">
+             <img src="/MultiMedia/eye.png" class="eyeIcon" id="eyeIcon" alt="eye icon">
             </div>
 
             <input type="text" name="name" class="name" placeholder="NAME" required>
