--- a/HTML/stores.html
+++ b/HTML/stores.html
@@ -5,18 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About us</title>
 
-    <link rel="stylesheet" href="components/componentHeader.css">
-    <link rel="stylesheet" href="components/componentFooter.css">
-    <link rel="stylesheet" href="components/comingSoon.css">
-    <link rel="stylesheet" href="CSS/aboutus.css">
+    <link rel="stylesheet" href="/components/componentHeader.css">
+    <link rel="stylesheet" href="/components/componentFooter.css">
+    <link rel="stylesheet" href="/components/comingSoon.css">
+    <link rel="stylesheet" href="/CSS/aboutus.css">
     
-    <script src="JavaScript/productsData.js" defer></script>
-    <script src="JavaScript/mobileMenu.js" defer></script>
+    <script src="/JavaScript/productsData.js" defer></script>
+    <script src="/JavaScript/mobileMenu.js" defer></script>
 
-    <script type="module" src="JavaScript/renderProducts.js"></script>
-    <script type="module" src="JavaScript/loaderComponent.js"></script>
-    <script type="module" src="JavaScript/paymentPopup.js"></script>
-    <script type="module" src="JavaScript/main.js"></script>
+    <script type="module" src="/JavaScript/renderProducts.js"></script>
+    <script type="module" src="/JavaScript/loaderComponent.js"></script>
+    <script type="module" src="/JavaScript/paymentPopup.js"></script>
+    <script type="module" src="/JavaScript/main.js"></script>
 </head>
 <body>
     <div id="header"></div>
