--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <main>
       <section>
         <div>
-          <video src="/MultiMedia/Model.mp4" autoplay loop muted></video>
+          <video src="MultiMedia/Model.mp4" autoplay loop muted></video>
         </div>
 
         <div class="menu">
