--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
           <h2>MENU</h2>
           <ul class="rotator">
             <li class="rotator">
-              <a href="/HTML/dresses.html"><span>Dresses</span></a></li>
+              <a href="HTML/dresses.html"><span>Dresses</span></a></li>
             <li class="rotator">
-              <a href="/HTML/jeans.html"><span>Jeans</span></a></li>
+              <a href="HTML/jeans.html"><span>Jeans</span></a></li>
             <li class="rotator">
-              <a href="/HTML/shoes.html"><span>Shoes</span></a></li>
+              <a href="HTML/shoes.html"><span>Shoes</span></a></li>
             <li class="rotator">
-              <a href="/HTML/jewellery.html"><span>Jewellery</span></a></li>
+              <a href="HTML/jewellery.html"><span>Jewellery</span></a></li>
             <li class="rotator">
-              <a href="/HTML/coats.html"><span>Coats</span></a></li>
+              <a href="HTML/coats.html"><span>Coats</span></a></li>
             <li class="rotator">
-              <a href="/HTML/bags.html"><span>Bags</span></a></li>
+              <a href="HTML/bags.html"><span>Bags</span></a></li>
           </ul>
         </div>
       </section>
@@ -191,34 +191,34 @@
         <div class="footermenu">
           <h3 class="menutitle">About us</h3>
           <ul class="fMenuList">
-            <li class="fMenuListItem"><a href="company.html">Company</a></li>
-            <li class="fMenuListItem"><a href="contact.html">Contact</a></li>
-            <li class="fMenuListItem"><a href="careers.html">Careers</a></li>
-            <li class="fMenuListItem"><a href="affiliates.html">Affiliates</a></li>
-            <li class="fMenuListItem"><a href="stores.html">Stores</a></li>
+            <li class="fMenuListItem"><a href="HTML/company.html">Company</a></li>
+            <li class="fMenuListItem"><a href="HTML/contact.html">Contact</a></li>
+            <li class="fMenuListItem"><a href="HTML/careers.html">Careers</a></li>
+            <li class="fMenuListItem"><a href="HTML/affiliates.html">Affiliates</a></li>
+            <li class="fMenuListItem"><a href="HTML/stores.html">Stores</a></li>
           </ul>
         </div>
 
         <div class="footermenu">
           <h3 class="menutitle">Useful links</h3>
           <ul class="fMenuList">
-            <li class="fMenuListItem"><a href="support.html">Support</a></li>
-            <li class="fMenuListItem"><a href="refund.html">Refund</a></li>
-            <li class="fMenuListItem"><a href="faq.html">FAQ</a></li>
-            <li class="fMenuListItem"><a href="privacy-policy.html">Privacy policy</a></li>
-            <li class="fMenuListItem"><a href="terms-of-use.html">Terms of use</a></li>
+            <li class="fMenuListItem"><a href="HTML/support.html">Support</a></li>
+            <li class="fMenuListItem"><a href="HTML/refund.html">Refund</a></li>
+            <li class="fMenuListItem"><a href="HTML/faq.html">FAQ</a></li>
+            <li class="fMenuListItem"><a href="HTML/privacy-policy.html">Privacy policy</a></li>
+            <li class="fMenuListItem"><a href="HTML/terms-of-use.html">Terms of use</a></li>
           </ul>
         </div>
 
          <div class="footermenu">
                 <h3 class="menutitle">Products</h3>
                 <ul class="fMenuList">
-                   <li class="fMenuListItem"><a href="dresses.html"><span>Dresses</span></a></li>
-                   <li class="fMenuListItem"><a href="jeans.html"><span>Jeans</span></a></li>
-                   <li class="fMenuListItem"><a href="shoes.html"><span>Shoes</span></a></li>
+                   <li class="fMenuListItem"><a href="HTML/dresses.html"><span>Dresses</span></a></li>
+                   <li class="fMenuListItem"><a href="HTML/jeans.html"><span>Jeans</span></a></li>
+                   <li class="fMenuListItem"><a href="vshoes.html"><span>Shoes</span></a></li>
                    <li class="fMenuListItem"><a href="jewellery.html"><span>Jewellery</span></a></li>
-                   <li class="fMenuListItem"><a href="coats.html"><span>Coats</span></a></li>
-                   <li class="fMenuListItem"><a href="bags.html"><span>Bags</span></a></li>
+                   <li class="fMenuListItem"><a href="HTML/coats.html"><span>Coats</span></a></li>
+                   <li class="fMenuListItem"><a href="HTML/bags.html"><span>Bags</span></a></li>
                 </ul>
             </div>
       </div>
