--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping Cart</title>
-  <link rel="stylesheet" href="/CSS/cart.css">
-  <link rel="stylesheet" href="/components/componentHeader.css">
-  <link rel="stylesheet" href="/components/componentFooter.css">
+  <link rel="stylesheet" href="../HTML/cart.html">
+  <link rel="stylesheet" href="../components/componentHeader.css">
+  <link rel="stylesheet" href="../components/componentFooter.css">
 
-  <script type="module" src="/JavaScript/loaderComponent.js" defer></script>
-  <script src="/JavaScript/mobileMenu.js" defer></script>
-  <script type="module" src="/JavaScript/cart.js" defer></script>
-  <script type="module" src="/JavaScript/cartCounter.js" defer></script>
-  <script src="/JavaScript/productsData.js" defer></script>
-  <script src="/JavaScript/paymentPopup.js" defer></script>
+  <script type="module" src="..JavaScript/loaderComponent.js" defer></script>
+  <script src="../JavaScript/mobileMenu.js" defer></script>
+  <script type="module" src="../JavaScript/cart.js" defer></script>
+  <script type="module" src="../JavaScript/cartCounter.js" defer></script>
+  <script src="../JavaScript/productsData.js" defer></script>
+  <script src="../JavaScript/paymentPopup.js" defer></script>
 
 </head>
 <body>
