--- a/HTML/cart.html
+++ b/HTML/cart.html
@@ -4,18 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Shopping Cart</title>
-  <link rel="stylesheet" href="../CSS/cart.css">
-  <link rel="stylesheet" href="../components/componentHeader.css">
-  <link rel="stylesheet" href="../components/componentFooter.css">
 
-  <script type="module" src="../JavaScript/cart.js" defer></script>
-  <script type="module" src="../JavaScript/cartCounter.js" defer></script>
-  <script type="module" src="../JavaScript/loaderComponent.js" defer></script>
-  <script src="../JavaScript/mobileMenu.js" defer></script>
-  <script src="../JavaScript/productsData.js" defer></script>
-  <script src="../JavaScript/paymentPopup.js" defer></script>
+  <!-- CSS -->
+  <link rel="stylesheet" href="/projects-SARA/CSS/cart.css">
+  <link rel="stylesheet" href="/projects-SARA/component/componentHeader.css">
+  <link rel="stylesheet" href="/projects-SARA/component/componentFooter.css">
 
+  <!-- JS Modules -->
+  <script type="module" src="/projects-SARA/JavaScript/productsData.js" defer></script>
+  <script type="module" src="/projects-SARA/JavaScript/paymentPopup.js" defer></script>
+  <script type="module" src="/projects-SARA/JavaScript/cart.js" defer></script>
+  <script type="module" src="/projects-SARA/JavaScript/cartCounter.js" defer></script>
+  <script type="module" src="/projects-SARA/JavaScript/loaderComponent.js" defer></script>
+
+  <!-- JS normal -->
+  <script src="/projects-SARA/JavaScript/mobileMenu.js" defer></script>
 </head>
+
 <body>
 
 <div id="header"></div>
