--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <input type="search" placeholder="search..." />
 
           <!--Basket-->
-          <a href="HTML/cart.html">
+          <a href="cart.html">
            <div class="shopping-cart">
             <span class="material-symbols-outlined cart-icon" id="cart">shopping_cart</span>
             <span class="shopping-cart-accounter" id="cart-count">0</span>
@@ -51,7 +51,7 @@
           </a>
 
           <!--Account-->
-          <a href="HTML/account.html"><span class="material-symbols-outlined">person</span></a>
+          <a href="account.html"><span class="material-symbols-outlined">person</span></a>
         </div>
       </nav>
     </header>
@@ -66,17 +66,17 @@
           <h2>MENU</h2>
           <ul class="rotator">
             <li class="rotator">
-              <a href="HTML/dresses.html"><span>Dresses</span></a></li>
+              <a href="dresses.html"><span>Dresses</span></a></li>
             <li class="rotator">
-              <a href="HTML/jeans.html"><span>Jeans</span></a></li>
+              <a href="jeans.html"><span>Jeans</span></a></li>
             <li class="rotator">
-              <a href="HTML/shoes.html"><span>Shoes</span></a></li>
+              <a href="shoes.html"><span>Shoes</span></a></li>
             <li class="rotator">
-              <a href="HTML/jewellery.html"><span>Jewellery</span></a></li>
+              <a href="jewellery.html"><span>Jewellery</span></a></li>
             <li class="rotator">
-              <a href="HTML/coats.html"><span>Coats</span></a></li>
+              <a href="coats.html"><span>Coats</span></a></li>
             <li class="rotator">
-              <a href="HTML/bags.html"><span>Bags</span></a></li>
+              <a href="bags.html"><span>Bags</span></a></li>
           </ul>
         </div>
       </section>
@@ -114,7 +114,7 @@
           <span class="txt">love</span>
           <span class="txt">with the details.</span>
         </h3>
-         <a href="HTML/dresses.html" class="cta-btn">SEE MORE DETAILS</a>
+         <a href="dresses.html" class="cta-btn">SEE MORE DETAILS</a>
         </div>
       </section>
 
@@ -148,7 +148,7 @@
           <p>AUTUMN NEW ARRIVALS</p>
           <h3>New Season</h3>
           <h3>New Collection</h3>
-          <a href="HTML/winterCollection.html"><button class="newCollButton">Choose your style</button></a>
+          <a href="winterCollection.html"><button class="newCollButton">Choose your style</button></a>
         </div>
         <div class="sectNewColl">
           <img src="MultiMedia/newcollection2.jpg" class="imgNewColl" alt="winter collection">
@@ -191,34 +191,34 @@
         <div class="footermenu">
           <h3 class="menutitle">About us</h3>
           <ul class="fMenuList">
-            <li class="fMenuListItem"><a href="HTML/company.html">Company</a></li>
-            <li class="fMenuListItem"><a href="HTML/contact.html">Contact</a></li>
-            <li class="fMenuListItem"><a href="HTML/careers.html">Careers</a></li>
-            <li class="fMenuListItem"><a href="HTML/affiliates.html">Affiliates</a></li>
-            <li class="fMenuListItem"><a href="HTML/stores.html">Stores</a></li>
+            <li class="fMenuListItem"><a href="company.html">Company</a></li>
+            <li class="fMenuListItem"><a href="contact.html">Contact</a></li>
+            <li class="fMenuListItem"><a href="careers.html">Careers</a></li>
+            <li class="fMenuListItem"><a href="affiliates.html">Affiliates</a></li>
+            <li class="fMenuListItem"><a href="stores.html">Stores</a></li>
           </ul>
         </div>
 
         <div class="footermenu">
           <h3 class="menutitle">Useful links</h3>
           <ul class="fMenuList">
-            <li class="fMenuListItem"><a href="HTML/support.html">Support</a></li>
-            <li class="fMenuListItem"><a href="HTML/refund.html">Refund</a></li>
-            <li class="fMenuListItem"><a href="HTML/faq.html">FAQ</a></li>
-            <li class="fMenuListItem"><a href="HTML/privacy-policy.html">Privacy policy</a></li>
-            <li class="fMenuListItem"><a href="HTML/terms-of-use.html">Terms of use</a></li>
+            <li class="fMenuListItem"><a href="support.html">Support</a></li>
+            <li class="fMenuListItem"><a href="refund.html">Refund</a></li>
+            <li class="fMenuListItem"><a href="faq.html">FAQ</a></li>
+            <li class="fMenuListItem"><a href="privacy-policy.html">Privacy policy</a></li>
+            <li class="fMenuListItem"><a href="terms-of-use.html">Terms of use</a></li>
           </ul>
         </div>
 
          <div class="footermenu">
                 <h3 class="menutitle">Products</h3>
                 <ul class="fMenuList">
-                   <li class="fMenuListItem"><a href="HTML/dresses.html"><span>Dresses</span></a></li>
-                   <li class="fMenuListItem"><a href="HTML/jeans.html"><span>Jeans</span></a></li>
-                   <li class="fMenuListItem"><a href="vshoes.html"><span>Shoes</span></a></li>
+                   <li class="fMenuListItem"><a href="dresses.html"><span>Dresses</span></a></li>
+                   <li class="fMenuListItem"><a href="jeans.html"><span>Jeans</span></a></li>
+                   <li class="fMenuListItem"><a href="shoes.html"><span>Shoes</span></a></li>
                    <li class="fMenuListItem"><a href="jewellery.html"><span>Jewellery</span></a></li>
-                   <li class="fMenuListItem"><a href="HTML/coats.html"><span>Coats</span></a></li>
-                   <li class="fMenuListItem"><a href="HTML/bags.html"><span>Bags</span></a></li>
+                   <li class="fMenuListItem"><a href="coats.html"><span>Coats</span></a></li>
+                   <li class="fMenuListItem"><a href="bags.html"><span>Bags</span></a></li>
                 </ul>
             </div>
       </div>
