update all links

--- a/account.html
+++ b/account.html
@@ -10,7 +10,7 @@
 <body>
   <section class="loginPage">
     <div class="parentText">
-       <a href="HTML/index.html"> <h1>SARA</h1></a>
+       <a href="index.html"> <h1>SARA</h1></a>
         <h3 class="login">LOG IN</h3>
         <form action="">
          <input type="email" id="email" class="email" placeholder="EMAIL" required>
@@ -21,7 +21,7 @@
          <button id="loginbtn" class="loginbtn">LOG IN</button>
         </form>
 
-        <a href="HTML/signup.html"><button id="signupbtn" class="signupbtn" >SIGN UP</button></a>
+        <a href="signup.html"><button id="signupbtn" class="signupbtn" >SIGN UP</button></a>
 
         <a href="#" target="_blank">HELP</a>
     </div>
