--- a/shoes.html
+++ b/shoes.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoes | Collection | SARA</title>
 
-    <link rel="stylesheet" href="/components/componentHeader.css">
-    <link rel="stylesheet" href="/components/componentFooter.css">
-    <link rel="stylesheet" href="/CSS/productPage.css">
+    <link rel="stylesheet" href="components/componentHeader.css">
+    <link rel="stylesheet" href="components/componentFooter.css">
+    <link rel="stylesheet" href="CSS/productPage.css">
 
-    <script src="/JavaScript/productsData.js" defer></script>
-    <script type="module" src="/JavaScript/renderProducts.js" defer></script>
-    <script type="module" src="/JavaScript/loaderComponent.js" defer></script>
-    <script src="/JavaScript/mobileMenu.js" defer></script>
+    <script src="JavaScript/productsData.js" defer></script>
+    <script type="module" src="JavaScript/renderProducts.js" defer></script>
+    <script type="module" src="JavaScript/loaderComponent.js" defer></script>
+    <script src="JavaScript/mobileMenu.js" defer></script>
 </head>
 <body>
     
