--- a/cart.html
+++ b/cart.html
@@ -13,9 +13,9 @@
   <!-- JS Modules -->
    <script type="module" src="JavaScript/loaderComponent.js" defer></script>
    <script type="module" src="JavaScript/cart.js" defer></script>
-   <script type="module" src="JavaScript/cartCounter.js" defer></script>
+<!--   <script type="module" src="JavaScript/cartCounter.js" defer></script>
   <script type="module" src="JavaScript/productsData.js" defer></script>
-  <script type="module" src="JavaScript/paymentPopup.js" defer></script>
+  <script type="module" src="JavaScript/paymentPopup.js" defer></script>-->
   <!-- JS normal -->
   <script src="JavaScript/mobileMenu.js" defer></script>
 </head>
