--- a/cart.html
+++ b/cart.html
@@ -7,15 +7,15 @@
 
   <!-- CSS -->
   <link rel="stylesheet" href="./CSS/cart.css">
-  <link rel="stylesheet" href="./components/componentHeader.css">
+  <link rel="stylesheet" href="./gitcomponents/componentHeader.css">
   <link rel="stylesheet" href="./components/componentFooter.css">
 
   <!-- JS Modules -->
    <script type="module" src="./JavaScript/loaderComponent.js" defer></script>
    <script type="module" src="./JavaScript/cart.js" defer></script>
-<!--   <script type="module" src="JavaScript/cartCounter.js" defer></script>
+   <script type="module" src="../SARA/JavaScript/cartCounter.js" defer></script>
   <script type="module" src="JavaScript/productsData.js" defer></script>
-  <script type="module" src="JavaScript/paymentPopup.js" defer></script>-->
+  <script type="module" src="JavaScript/paymentPopup.js" defer></script>
   <!-- JS normal -->
   <script src="./JavaScript/mobileMenu.js" defer></script>
 </head>
