--- a/account.html
+++ b/account.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SARA | Login</title>
-    <link rel="stylesheet" href="CSS/account.css">
-    <script src="JavaScript/account.js" defer></script>
+    <link rel="stylesheet" href="./CSS/account.css">
+    <script src="./JavaScript/account.js" defer></script>
 </head>
 <body>
   <section class="loginPage">
@@ -15,7 +15,7 @@
         <form action="">
          <input type="email" id="email" class="email" placeholder="EMAIL" required>
          <input type="password" id="password" class="password" placeholder="PASSWORD" required>
-         <img src="MultiMedia/eye.png" alt="eye icon for password" id="eye" class="eye">
+         <img src="./MultiMedia/eye.png" alt="eye icon for password" id="eye" class="eye">
          <a href="#" target="_blank">Have you forgotten your password?</a>
 
          <button id="loginbtn" class="loginbtn">LOG IN</button>
@@ -26,7 +26,7 @@
         <a href="#" target="_blank">HELP</a>
     </div>
     <div class="parentPicture">
-        <img src="MultiMedia/logIMG.jpg" alt="Log in image" class="loginIMG">
+        <img src="./MultiMedia/logIMG.jpg" alt="Log in image" class="loginIMG">
     </div>
   </section>
 </body>
