resolve img issue on collection page

--- a/winterCollection.html
+++ b/winterCollection.html
@@ -49,7 +49,7 @@
                 <a class="btn" href="shoes.html">See details</a>
             </div>
             <div class="prodct-cart">
-                <img class="productIMG dress" src="./MultiMedia/products imgs/dressreca.png" alt="product picture">
+                <img class="productIMG dress" src="./MultiMedia/products imgs/dressReca.png imgs/dressReca.png" alt="product picture">
                 <h3 class="pTitle">dresses</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
