Resolve path access of products cards of whole website

--- a/dresses.html
+++ b/dresses.html
@@ -9,9 +9,9 @@
     <link rel="stylesheet" href="./components/componentFooter.css">
     <link rel="stylesheet" href="./CSS/productPage.css">
 
-    <script src="./JavaScript/productsData.js" defer></script>
+   <!-- <script src="./JavaScript/productsData.js" defer></script> -->
     <script type="module" src="./JavaScript/renderProducts.js"></script>
-    <script type="module" src="./JavaScript/loaderComponent.js" defer></script>
+    <script type="module" src="./JavaScript/loaderComponent.js"></script>
     <script src="./JavaScript/mobileMenu.js" defer></script>
 </head>
 <body>
@@ -19,18 +19,7 @@
      <div id="header"></div>
 
     <section class="product-page" data-product="Dress">
-        <div class="imgp">
-           <img src="" alt="" class="productImg">
-        </div>
-        <div >
-            <h2></h2>
-            <p></p>
-            <p></p>
-            <p></p>
-            <p></p>
-            <button>Add to cart</button>
-            <button>Buy now!</button>
-        </div>
+    
     </section>
 
     <div id="footer"></div>
