--- a/winterCollection.html
+++ b/winterCollection.html
@@ -26,7 +26,7 @@
         <div class="container">
           <div class="cards"> 
             <div class="prodct-cart">
-                <img class="productIMG" src="./MultiMedia/products imgs/jeans/jeannavy.png" alt="product picture">
+                <img class="productIMG" src="./MultiMedia/productsImgs/jeans/jeannavy.png" alt="product picture">
                 <h3 class="pTitle">jeans</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
@@ -34,7 +34,7 @@
             </div>
 
             <div class="prodct-cart">
-                <img class="productIMG" src="./MultiMedia/products imgs/coats/coatred.png" alt="product picture">
+                <img class="productIMG" src="./MultiMedia/productsImgs/coats/coatred.png" alt="product picture">
                 <h3 class="pTitle">coats</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
@@ -42,28 +42,28 @@
             </div>
 
             <div class="prodct-cart">
-                <img class="productIMG" src="./MultiMedia/products imgs/shoes/shoesgrena.png" alt="product picture">
+                <img class="productIMG" src="./MultiMedia/productsImgs/shoes/shoesgrena.png" alt="product picture">
                 <h3 class="pTitle">shoes</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
                 <a class="btn" href="shoes.html">See details</a>
             </div>
             <div class="prodct-cart">
-                <img class="productIMG dress" src="./MultiMedia/products imgs/dressReca.png" alt="product picture">
+                <img class="productIMG dress" src="./MultiMedia/productsImgs/dressReca.png" alt="product picture">
                 <h3 class="pTitle">dresses</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
                 <a class="btn" href="dresses.html">See details</a>
             </div>
             <div class="prodct-cart">
-                <img class="productIMG" src="./MultiMedia/products imgs/bags/bagblack.png" alt="product picture">
+                <img class="productIMG" src="./MultiMedia/productsImgs/bags/bagblack.png" alt="product picture">
                 <h3 class="pTitle">Bags</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
                 <a class="btn" href="bags.html">See details</a>
             </div>
             <div class="prodct-cart">
-                <img class="productIMG" src="./MultiMedia/products imgs/jewellery/jewellery1.png" alt="product picture">
+                <img class="productIMG" src="./MultiMedia/productsImgs/jewellery/jewellery1.png" alt="product picture">
                 <h3 class="pTitle">jewellery</h3>
                 <h4 class="price">price</h4>
                 <span class="stars">⭐️⭐️⭐️⭐️⭐️</span>
