Add dynam footer on home page

--- a/cart.html
+++ b/cart.html
@@ -11,11 +11,10 @@
   <link rel="stylesheet" href="./components/componentFooter.css">
 
   <!-- JS Modules -->
-   <script type="module" src="./JavaScript/loaderComponent.js" defer></script>
-   <script type="module" src="./JavaScript/cart.js" defer></script>
-   <script type="module" src="./SARA/JavaScript/cartCounter.js" defer></script>
-  <script type="module" src="./JavaScript/productsData.js" defer></script>
-  <script type="module" src="./JavaScript/paymentPopup.js" defer></script>
+   <script type="module" src="./JavaScript/loaderComponent.js"></script>
+   <script type="module" src="./JavaScript/cart.js"></script>
+   <script type="module" src="./JavaScript/cartCounter.js"></script>
+  <script type="module" src="./JavaScript/paymentPopup.js"></script>
   <!-- JS normal -->
   <script src="./JavaScript/mobileMenu.js" defer></script>
 </head>
@@ -39,5 +38,7 @@
 
  <div id="footer"></div>
  
+
+ <script type="module" src="./JavaScript/search.js" defer></script>
 </body>
 </html>
