--- a/winterCollection.html
+++ b/winterCollection.html
@@ -74,6 +74,8 @@
     </main>
     
     <div id="footer"></div>
-    
+
+
+<script type="module" src="./JavaScript/search.js" defer></script>
 </body>
 </html>
