--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./components/comingSoon.css">
     <link rel="stylesheet" href="./CSS/aboutus.css">
     
-    <script src="./JavaScript/productsData.js" defer></script>
+    <script type="module" src="./JavaScript/productsData.js" defer></script>
     <script src="./JavaScript/mobileMenu.js" defer></script>
 
     <script type="module" src="./JavaScript/renderProducts.js"></script>
