--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <link rel="stylesheet" href="CSS/style.css" />
     <script src="JavaScript/animations.js" defer></script>
-    <script src="JavaScript/main.js" defer></script>
+    <script type="module" src="JavaScript/main.js" defer></script>
     <script type="module" src="JavaScript/renderProducts.js" defer></script>
   </head>
   <body>
