--- a/jewellery.html
+++ b/jewellery.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="components/componentFooter.css">
     <link rel="stylesheet" href="CSS/productPage.css">
 
-    <script src="JavaScript/productsData.js" defer></script>
+    <script type="module" src="JavaScript/productsData.js" defer></script>
     <script type="module" src="JavaScript/renderProducts.js" defer></script>
     <script type="module" src="JavaScript/loaderComponent.js" defer></script>
     <script src="JavaScript/mobileMenu.js" defer></script>
